# kobold-archaeology

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/fixtures/: corpus-index.json  gap-board.json
