[package]
name = "kobold-archaeology"
version = "0.1.0"
edition = "2021"
description = "Corpus archaeology: a public/private COBOL dataset registry, a surface-frequency gap board, and a generalized COBOL feature-terrain scanner that maps real code against the court board."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-archaeology"
readme = "README.md"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
